# MemoryOperation

./: CMakeLists.txt
MemoryOperation/: CMakeLists.txt
MemoryOperation/Include/: BreakPoint.h  CrashSuppressor.h  DetourMacro.hpp  Memory.h  MemoryOperation.h  MemoryOperator.h  Patch.h  PatternScanner.h  Traceback.h  WinConsole.h  WinDetour.h
MemoryOperation/src/: Breakpoint.cpp  CrashSuppressor.cpp  Memory.cpp  MemoryOperation.cpp  MemoryOperator.cpp  Patch.cpp  PatternScanner.cpp  WinConsole.cpp  WinDetour.cpp
